tests/ui/privacy/associated-item-privacy-type-binding.stderr
error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:11:13
   |
LL | /     pub macro mac1() {
LL | |         let _: Box<dyn PubTr<AssocTy = u8>>;
   | |             ^ private trait
LL | |
LL | |
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac1!`
...
LL |       priv_trait::mac1!();
   |       ------------------- in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:11:16
   |
LL | /     pub macro mac1() {
LL | |         let _: Box<dyn PubTr<AssocTy = u8>>;
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private trait
LL | |
LL | |
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac1!`
...
LL |       priv_trait::mac1!();
   |       ------------------- in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:14:31
   |
LL | /     pub macro mac1() {
LL | |         let _: Box<dyn PubTr<AssocTy = u8>>;
LL | |
LL | |
LL | |         type InSignatureTy2 = Box<dyn PubTr<AssocTy = u8>>;
   | |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private trait
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac1!`
...
LL |       priv_trait::mac1!();
   |       ------------------- in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:16:31
   |
LL | /     pub macro mac1() {
LL | |         let _: Box<dyn PubTr<AssocTy = u8>>;
LL | |
LL | |
...  |
LL | |         trait InSignatureTr2: PubTr<AssocTy = u8> {}
   | |                               ^^^^^^^^^^^^^^^^^^^ private trait
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac1!`
...
LL |       priv_trait::mac1!();
   |       ------------------- in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:20:13
   |
LL | /     pub macro mac2() {
LL | |         let _: Box<dyn PrivTr<AssocTy = u8>>;
   | |             ^ private trait
LL | |
LL | |
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac2!`
...
LL |       priv_trait::mac2!();
   |       ------------------- in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:20:16
   |
LL | /     pub macro mac2() {
LL | |         let _: Box<dyn PrivTr<AssocTy = u8>>;
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private trait
LL | |
LL | |
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac2!`
...
LL |       priv_trait::mac2!();
   |       ------------------- in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:23:31
   |
LL | /     pub macro mac2() {
LL | |         let _: Box<dyn PrivTr<AssocTy = u8>>;
LL | |
LL | |
LL | |         type InSignatureTy1 = Box<dyn PrivTr<AssocTy = u8>>;
   | |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private trait
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac2!`
...
LL |       priv_trait::mac2!();
   |       ------------------- in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:25:31
   |
LL | /     pub macro mac2() {
LL | |         let _: Box<dyn PrivTr<AssocTy = u8>>;
LL | |
LL | |
...  |
LL | |         trait InSignatureTr1: PrivTr<AssocTy = u8> {}
   | |                               ^^^^^^^^^^^^^^^^^^^^ private trait
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac2!`
...
LL |       priv_trait::mac2!();
   |       ------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:44:13
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
   | |             ^ private type
LL | |
LL | |
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:44:16
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:47:13
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
LL | |
LL | |
LL | |         let _: Box<dyn PubTr<AssocTy = u8>>;
   | |             ^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:47:16
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
LL | |
LL | |
LL | |         let _: Box<dyn PubTr<AssocTy = u8>>;
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:50:35
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
LL | |
LL | |
...  |
LL | |         pub type InSignatureTy1 = Box<dyn PubTrWithParam<AssocTy = u8>>;
   | |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:52:35
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
LL | |
LL | |
...  |
LL | |         pub type InSignatureTy2 = Box<dyn PubTr<AssocTy = u8>>;
   | |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:54:31
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
LL | |
LL | |
...  |
LL | |         trait InSignatureTr1: PubTrWithParam<AssocTy = u8> {}
   | |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:56:31
   |
LL | /     pub macro mac() {
LL | |         let _: Box<dyn PubTrWithParam<AssocTy = u8>>;
LL | |
LL | |
...  |
LL | |         trait InSignatureTr2: PubTr<AssocTy = u8> {}
   | |                               ^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: aborting due to 16 previous errors

